objects/Cancellation_Request__c.object
<CustomObject>
    <fields>
        <fullName>Waived_Setup_Fees__c</fullName>
        <label>Waived Setup Fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Reviewed and Charged Fee</fullName>
                </value>
                <value>
                    <fullName>Reviewed and Accepted Downsell</fullName>
                </value>
                <value>
                    <fullName>Reviewed and Waived Fee</fullName>
                </value>
                <value>
                    <fullName>Reviewed and Saved No Concessions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Only2__c</fullName>
        <label>Web Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Only_Detail__c</fullName>
        <label>Web Only Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Updates2__c</fullName>
        <label>Website Updates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Offer</fullName>
                </value>
                <value>
                    <fullName>Offered and Rejected</fullName>
                </value>
                <value>
                    <fullName>Offered and Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_Updates_Detail__c</fullName>
        <label>Website Updates Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Website Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winback_Feature__c</fullName>
        <label>Winback Feature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Acquisition Products</fullName>
                </value>
                <value>
                    <fullName>Custom Graphics</fullName>
                </value>
                <value>
                    <fullName>Free OBC</fullName>
                </value>
                <value>
                    <fullName>New Patient Forms Online</fullName>
                </value>
                <value>
                    <fullName>Old Portal Functionality</fullName>
                </value>
                <value>
                    <fullName>Online Pay Options</fullName>
                </value>
                <value>
                    <fullName>Paperless Records</fullName>
                </value>
                <value>
                    <fullName>Patient Portal/Records</fullName>
                </value>
                <value>
                    <fullName>Patient Response Portal</fullName>
                </value>
                <value>
                    <fullName>Post Op Instructions</fullName>
                </value>
                <value>
                    <fullName>Recurring Invoices</fullName>
                </value>
                <value>
                    <fullName>Self-Service Message Schedule</fullName>
                </value>
                <value>
                    <fullName>Two-Way Texting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Winback_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Winback Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Within_SLA__c</fullName>
        <label>Within SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yodle_Gold_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yodle Gold Service?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Code_1__c</fullName>
        <description>First Cancel Codes - Updated 2018</description>
        <inlineHelpText>Select a Cancel Code</inlineHelpText>
        <label>Cancel Code 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancel_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Sales Expectations</fullName>
                </value>
                <value>
                    <fullName>Unable To Make Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product-Related</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Client Cost-Cutting</fullName>
                </value>
                <value>
                    <fullName>Buyer's Remorse</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>MLS Feed Denied</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Corporate Cancellation</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Code_2__c</fullName>
        <description>Second Cancel Codes - Updated 2018</description>
        <inlineHelpText>Select a Cancel Code</inlineHelpText>
        <label>Cancel Code 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancel_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Sales Expectations</fullName>
                </value>
                <value>
                    <fullName>Unable To Make Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product-Related</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Client Cost-Cutting</fullName>
                </value>
                <value>
                    <fullName>Buyer's Remorse</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>MLS Feed Denied</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Corporate Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Type__c</fullName>
        <description>This field determines what shows in the Cancel Code 1 Field</description>
        <inlineHelpText>Select the Product for Cancellation</inlineHelpText>
        <label>Cancel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead Stream</fullName>
                </value>
                <value>
                    <fullName>Lighthouse</fullName>
                </value>
                <value>
                    <fullName>Max / Essentials</fullName>
                </value>
                <value>
                    <fullName>TORCHx</fullName>
                </value>
                <value>
                    <fullName>WBN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Code_1_Details__c</fullName>
        <description>Cancel Code 2 Details</description>
        <inlineHelpText>This field list is determined by the Cancel Code 1 drop down field value</inlineHelpText>
        <label>Cancel Code 1 Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancel_Code_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ability to Customize Website</fullName>
                </value>
                <value>
                    <fullName>Account Acceptance</fullName>
                </value>
                <value>
                    <fullName>Additional Lead Sources</fullName>
                </value>
                <value>
                    <fullName>Appointment Confirmation Rate</fullName>
                </value>
                <value>
                    <fullName>App speed - software is slow</fullName>
                </value>
                <value>
                    <fullName>Better CRM</fullName>
                </value>
                <value>
                    <fullName>Better Customer Service</fullName>
                </value>
                <value>
                    <fullName>Better Features</fullName>
                </value>
                <value>
                    <fullName>Better Review Solicitation</fullName>
                </value>
                <value>
                    <fullName>Better ROI</fullName>
                </value>
                <value>
                    <fullName>Better Website</fullName>
                </value>
                <value>
                    <fullName>Broker Approval Required</fullName>
                </value>
                <value>
                    <fullName>Business Too Small To See Value</fullName>
                </value>
                <value>
                    <fullName>Campaign setup work completed incorrectly</fullName>
                </value>
                <value>
                    <fullName>Campaign setup work not completed</fullName>
                </value>
                <value>
                    <fullName>Cheaper competitor</fullName>
                </value>
                <value>
                    <fullName>Client Did Not Disclose</fullName>
                </value>
                <value>
                    <fullName>Client Refuses to Sign Contract</fullName>
                </value>
                <value>
                    <fullName>Client wanted to approve site before launch</fullName>
                </value>
                <value>
                    <fullName>Closing Business</fullName>
                </value>
                <value>
                    <fullName>Consolidating Accounts - LH to LH</fullName>
                </value>
                <value>
                    <fullName>Consultant Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Consumables Pricing</fullName>
                </value>
                <value>
                    <fullName>CRM Functionality</fullName>
                </value>
                <value>
                    <fullName>CRM lacking features</fullName>
                </value>
                <value>
                    <fullName>Customization of Automated Services</fullName>
                </value>
                <value>
                    <fullName>Custom Landing Pages</fullName>
                </value>
                <value>
                    <fullName>Cutting Advertising Budget</fullName>
                </value>
                <value>
                    <fullName>Cutting Budget Overall</fullName>
                </value>
                <value>
                    <fullName>Denied by Broker - Switching Teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Code_2_Details__c</fullName>
        <description>Second Cancel Code Details - Updated 2018</description>
        <inlineHelpText>This field list is determined by the Cancel Code 2 drop down field value</inlineHelpText>
        <label>Cancel Code 2 Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancel_Code_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ability to Customize Website</fullName>
                </value>
                <value>
                    <fullName>Account Acceptance</fullName>
                </value>
                <value>
                    <fullName>Additional Lead Sources</fullName>
                </value>
                <value>
                    <fullName>Appointment Confirmation Rate</fullName>
                </value>
                <value>
                    <fullName>App speed - software is slow</fullName>
                </value>
                <value>
                    <fullName>Better CRM</fullName>
                </value>
                <value>
                    <fullName>Better Customer Service</fullName>
                </value>
                <value>
                    <fullName>Better Features</fullName>
                </value>
                <value>
                    <fullName>Better Review Solicitation</fullName>
                </value>
                <value>
                    <fullName>Better ROI</fullName>
                </value>
                <value>
                    <fullName>Better Website</fullName>
                </value>
                <value>
                    <fullName>Broker Approval Required</fullName>
                </value>
                <value>
                    <fullName>Business Too Small To See Value</fullName>
                </value>
                <value>
                    <fullName>Campaign setup work completed incorrectly</fullName>
                </value>
                <value>
                    <fullName>Campaign setup work not completed</fullName>
                </value>
                <value>
                    <fullName>Cheaper competitor</fullName>
                </value>
                <value>
                    <fullName>Client Did Not Disclose</fullName>
                </value>
                <value>
                    <fullName>Client Refuses to Sign Contract</fullName>
                </value>
                <value>
                    <fullName>Client wanted to approve site before launch</fullName>
                </value>
                <value>
                    <fullName>Closing Business</fullName>
                </value>
                <value>
                    <fullName>Consolidating Accounts - LH to LH</fullName>
                </value>
                <value>
                    <fullName>Consultant Contact Attempt</fullName>
                </value>
                <value>
                    <fullName>Consumables Pricing</fullName>
                </value>
                <value>
                    <fullName>CRM Functionality</fullName>
                </value>
                <value>
                    <fullName>CRM lacking features</fullName>
                </value>
                <value>
                    <fullName>Customization of Automated Services</fullName>
                </value>
                <value>
                    <fullName>Custom Landing Pages</fullName>
                </value>
                <value>
                    <fullName>Cutting Advertising Budget</fullName>
                </value>
                <value>
                    <fullName>Cutting Budget Overall</fullName>
                </value>
                <value>
                    <fullName>Denied by Broker - Switching Teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Product__c</fullName>
        <description>The future product client will have moving forward after cancel/save.</description>
        <label>Future Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Centermark</fullName>
                </value>
                <value>
                    <fullName>Centermark Enhanced SEO</fullName>
                </value>
                <value>
                    <fullName>Centermark Integrated Email</fullName>
                </value>
                <value>
                    <fullName>Centermark Lite</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Essentials</fullName>
                </value>
                <value>
                    <fullName>Essentials Lite</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Leads By Web</fullName>
                </value>
                <value>
                    <fullName>Lead Stream ATV</fullName>
                </value>
                <value>
                    <fullName>Lead Stream - Platform Only</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
                <value>
                    <fullName>TORCHx Agent</fullName>
                </value>
                <value>
                    <fullName>TORCHx Agent Ads</fullName>
                </value>
                <value>
                    <fullName>TORCHx Broker</fullName>
                </value>
                <value>
                    <fullName>TORCHx Broker Ads</fullName>
                </value>
                <value>
                    <fullName>TORCHx Team</fullName>
                </value>
                <value>
                    <fullName>TORCHx Team Ads</fullName>
                </value>
                <value>
                    <fullName>Yodle Ads</fullName>
                </value>
                <value>
                    <fullName>Yodle Max</fullName>
                </value>
                <value>
                    <fullName>Yodle Organic</fullName>
                </value>
                <value>
                    <fullName>Yodle Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to be used in validation rule for edit permission after approval.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Approval process</description>
        <inlineHelpText>Used for Approval Process</inlineHelpText>
        <label>Record owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Record_Owner_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cancellation_Requests_Sales_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teardown_Date__c</fullName>
        <description>Date the Account should have a Master and Account Update Case created to Tear down the Account's website once Cancelled</description>
        <label>Teardown Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clients_Address__c</fullName>
        <formula>Account_Name__r.BillingStreet  &amp; ", "
&amp;  Account_Name__r.BillingCity  &amp; ", "
&amp;  Account_Name__r.BillingState  &amp; ", "
&amp;  Account_Name__r.BillingPostalCode  &amp; ", "
&amp;  Account_Name__r.BillingCountry</formula>
        <label>Client's Address</label>
        <type>Text</type>
    </fields>
    <label>Cancellation Form</label>
    <listViews>
        <fullName>Enspire_Cxl_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Client_ID__c</columns>
        <columns>Approved__c</columns>
        <columns>IsClosed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cancellation_Request__c.WBN_Cancellation_Request</value>
        </filters>
        <label>Enspire Cxl Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Cancellation_Requests</fullName>
        <columns>NAME</columns>
        <columns>Outcome__c</columns>
        <columns>Client_ID__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Next_Bill_Date__c</columns>
        <columns>Segment__c</columns>
        <columns>Current_Monthly_Revenue__c</columns>
        <columns>Future_Monthly_Revenue__c</columns>
        <columns>Attempts_to_Contact__c</columns>
        <columns>Next_Scheduled_Contact_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LH_TORCHx_Escalation__c</columns>
        <columns>Date_of_Cancellation_Request__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Outcome__c</field>
            <operation>equals</operation>
            <value>In Progress,New,Save Mode,Dollar Sync Period</value>
        </filters>
        <label>My Open Cancellation Requests</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Cancellation Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellation Requests</pluralLabel>
    <recordTypes>
        <fullName>Rogers_Cancellation_Request</fullName>
        <active>true</active>
        <description>Rogers Cancellations</description>
        <label>Rogers Cancellation Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>LH_Cancellation_Request</fullName>
        <active>true</active>
        <description>Lighthouse Cancellations</description>
        <label>LH Cancellation Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>TORCHx_Cancellation_Request</fullName>
        <active>true</active>
        <description>TORCHx Cancellations</description>
        <label>TORCHx Cancellation Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cancellation_Request</fullName>
        <active>true</active>
        <label>Cancellation Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>WBN_Cancellation_Request</fullName>
        <active>true</active>
        <description>WBN Cancellations</description>
        <label>WBN Cancellation Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Owner_for_LWB</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.Name = "Cancellation Request",
Account_IMS__c= "00532000005P6l3",
 ISCHANGED( OwnerId ),
OR(
 $User.ProfileId = "00e60000000ipQO",
 $User.ProfileId = "00e60000000im1S"))</errorConditionFormula>
        <errorMessage>This is a LBW Account, and should only be worked and edited by the LBW Customer Service team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Owner_for_POD</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.Name = "Cancellation Request",
Account_IMS__c= "005320000053YQ4",
 ISCHANGED( OwnerId ),
OR(
 $User.ProfileId = "00e60000000ipQO",
 $User.ProfileId = "00e60000000im1S"))</errorConditionFormula>
        <errorMessage>This is a Platinum Support Account, and should only be worked and edited by the Platinum Support team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_Close_Cancellation_Upon_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 IsClosed__c = TRUE,
 ISNEW())</errorConditionFormula>
        <errorDisplayField>Outcome__c</errorDisplayField>
        <errorMessage>You cannot create a cancellation in a closed status.  Create with "In Progress"  Cancel Outcome and then update the Cancel Outcome after.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_must_fill_out_Acct_in_save_mode</fullName>
        <active>true</active>
        <errorConditionFormula>and(
$User.ProfileId &lt;&gt; '00e60000000nQe9', /*sys admin*/
NOT(RecordType.Name = "TORCHx Cancellation Request"),
NOT(RecordType.Name = "WBN Cancellation Request"),
NOT(RecordType.Name = "LH Cancellation Request"),
NOT($User.Email = "sfdc@enspireforenterprise.com"), 
not(ispickval( Outcome__c , "In Progress") ||  ISPICKVAL(Outcome__c , "Duplicate Retention Case") ),
or(
ispickval( Account_in_Save_Mode__c  ,"")))</errorConditionFormula>
        <errorMessage>When closing this record, you must fill in the Product in Cancel Mode field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_must_fill_out_Additional_Notes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; '00e60000000nQe9', /*sys admin*/
NOT(RecordType.Name = "TORCHx Cancellation Request"),
NOT(RecordType.Name = "LH Cancellation Request"),
NOT($User.Email = "sfdc@enspireforenterprise.com"), 
NOT(ISPICKVAL( Outcome__c , "In Progress") ||  ISPICKVAL(Outcome__c , "Duplicate Retention Case") ),
OR(
ISBLANK( Additional_Notes__c )))</errorConditionFormula>
        <errorMessage>When closing this record, you must fill in the Additional Notes field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_must_fill_out_Agent_Confirmation</fullName>
        <active>true</active>
        <errorConditionFormula>and(
$User.ProfileId &lt;&gt; '00e60000000nQe9', /*sys admin*/
NOT(RecordType.Name = "TORCHx Cancellation Request"),
NOT(RecordType.Name = "WBN Cancellation Request"),
NOT(RecordType.Name = "LH Cancellation Request"),
NOT($User.Email = "sfdc@enspireforenterprise.com"),  
NOT(ISPICKVAL( Outcome__c , "In Progress") ||  ISPICKVAL(Outcome__c , "Duplicate Retention Case") ),
OR(
ISBLANK( Agent_Confirmation__c )))</errorConditionFormula>
        <errorMessage>When closing this record, you must fill in the Agent Confirmation field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_must_fill_out_Attempts_to_Contac</fullName>
        <active>true</active>
        <errorConditionFormula>and(
$User.ProfileId &lt;&gt; '00e60000000nQe9', /*sys admin*/
NOT($User.Email = "sfdc@enspireforenterprise.com"), 
RecordType.Name &lt;&gt; "TORCHx Cancellation Request",
not(RecordType.Name = "WBN Cancellation Request") &amp;&amp;
not(ispickval( Outcome__c , "In Progress") ||  ISPICKVAL(Outcome__c , "Duplicate Retention Case") ),
or(
ispickval( Attempts_to_Contact__c ,"")))</errorConditionFormula>
        <errorMessage>When closing this record, you must fill in the Attempts to Contact field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_must_fill_out_Client_into_dash</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; '00e60000000nQe9', /*sys admin*/
RecordTypeId &lt;&gt; "012320000005P4X",
NOT(RecordType.Name = "WBN Cancellation Request"),
NOT(RecordType.Name = "LH Cancellation Request"), 
NOT($User.Email = "sfdc@enspireforenterprise.com"), 
ISPICKVAL( Got_client_into_dashboard__c ,""),
NOT(ISPICKVAL( Outcome__c , "In Progress")),
NOT(ISPICKVAL(Outcome__c , "Duplicate Retention Case")))</errorConditionFormula>
        <errorMessage>When closing this record, you must fill in the Got Client Into Dashboard field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_must_fill_out_Email_to_Client</fullName>
        <active>true</active>
        <errorConditionFormula>and(RecordType.Name &lt;&gt; "Cancellation Request",
NOT(RecordType.Name &lt;&gt; "LH Cancellation Request"), 
NOT(RecordType.Name &lt;&gt; "Rogers Cancellation Request"), 
not(ispickval( Outcome__c , "In Progress") ||  ISPICKVAL(Outcome__c , "Duplicate Retention Case") ),
or(
isblank( Email_to_Client__c )))</errorConditionFormula>
        <errorMessage>When closing this record, you must fill in the Email to Client field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_must_fill_out_Escalation_Potenti</fullName>
        <active>true</active>
        <errorConditionFormula>and(
$User.ProfileId &lt;&gt; '00e60000000nQe9', /*sys admin*/
NOT(RecordType.Name = "TORCHx Cancellation Request"),
NOT(RecordType.Name = "WBN Cancellation Request"),
NOT(RecordType.Name = "LH Cancellation Request"), 
NOT($User.Email = "sfdc@enspireforenterprise.com"), 
not(ispickval( Outcome__c , "In Progress") ||  ISPICKVAL(Outcome__c , "Duplicate Retention Case") ),
or(
ispickval( Escalation_Potential__c ,"")))</errorConditionFormula>
        <errorMessage>When closing this record, you must fill in the Escalation Potential field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_must_fill_out_Monthly_Revenue</fullName>
        <active>true</active>
        <errorConditionFormula>and(
$User.ProfileId &lt;&gt; '00e60000000nQe9', /*sys admin*/
RecordType.Name &lt;&gt; "WBN Cancellation Request", 
RecordType.Name &lt;&gt; "LH Cancellation Request", 
NOT($User.Email = "sfdc@enspireforenterprise.com"), 
not(ispickval( Outcome__c , "In Progress") ||  ISPICKVAL(Outcome__c , "Duplicate Retention Case") ||
ISPICKVAL(Outcome__c , "New") ),
or(
isblank( Current_Monthly_Revenue__c )))</errorConditionFormula>
        <errorMessage>When closing this record, you must fill in the Current Monthly Revenue field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Duplicate_Cancel_Request</fullName>
        <active>true</active>
        <description>Used for Duplicate Cancel Requests</description>
        <errorConditionFormula>ISPICKVAL(Outcome__c, 'Duplicate Retention Case')  &amp;&amp;   ISBLANK(Additional_Notes__c )</errorConditionFormula>
        <errorMessage>Please fill in the Additional Notes field to save this as a duplicate Cancellation Form.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_refund_ammount_require_approved_by</fullName>
        <active>true</active>
        <errorConditionFormula>Refund_Amount__c  &gt; 0.01 &amp;&amp; 
ISBLANK( Refund_Approved_By__c ) &amp;&amp;  
RecordType.Name &lt;&gt; 'TORCHx Cancellation Request' &amp;&amp;
RecordType.Name &lt;&gt; 'LH Cancellation Request' &amp;&amp;
$User.Email &lt;&gt; "sfdc@enspireforenterprise.com" &amp;&amp;    
NOT(ISPICKVAL(Refund2__c, "Requested, Countered and Denied"))</errorConditionFormula>
        <errorMessage>For this refund please specify who approved the refund.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LBW_Hit_Lead_Range_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; '00e60000000nQe9', /*sys admin*/
RecordTypeId ="012600000009cOa",
 Initial_Product__c = "Leads By Web",
 ISPICKVAL(Hit_Lead_Range__c,""),
NOT(ISPICKVAL(Last_TP_Completed__c, "Churned in first month")),
OR(
  ISPICKVAL(Outcome__c, "Cancelled"),
   ISPICKVAL(Outcome__c, "Saved with No Concessions"),
  ISPICKVAL(Outcome__c, "Saved with Hard Concessions"),
  ISPICKVAL(Outcome__c, "Saved with Soft Concessions")))</errorConditionFormula>
        <errorDisplayField>Hit_Lead_Range__c</errorDisplayField>
        <errorMessage>Must Fill Out "Hit Lead Range?"  for LBW Accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LBW_Last_TP_Completed_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; '00e60000000nQe9', /*sys admin*/
RecordTypeId ="012600000009cOa",
 Initial_Product__c = "Leads By Web",
 ISPICKVAL(Last_TP_Completed__c, ""),
OR(
  ISPICKVAL(Outcome__c, "Cancelled"),
   ISPICKVAL(Outcome__c, "Saved with No Concessions"),
  ISPICKVAL(Outcome__c, "Saved with Hard Concessions"),
  ISPICKVAL(Outcome__c, "Saved with Soft Concessions")))</errorConditionFormula>
        <errorDisplayField>Last_TP_Completed__c</errorDisplayField>
        <errorMessage>Must Fill Out "Last TP Completed?" for LBW Accounts</errorMessage>
    </validationRules>
</CustomObject>